src/app/home/home.component.css
:root{
    --item-size: 8em;
}

#filterSection {
    top: 0;
    position: sticky;
    margin-left: .75vw;
    display: flex;
    align-items: center;
    text-align: center;
    padding-top: .5vw;
}

.container {
    margin-left: 1.5vw;
}

.gov-container-scrollport {
    height: inherit;
    min-height: 60em;
    width: 100%
}

.plant-holder,
.positional-plant-result-container {
    height: var(--item-size);
}

.plant-holder {
    display: flex;
    flex-direction: column;
}

.result-property{
    margin-bottom: 0;
}

